<resources>
    <string name="app_name">Snap\'anonym</string>
    <string name="app_title">Snap\'Anonym</string>
    <string name="publish_a_snap">Publish a snap</string>
    <string name="explore_snaps">explore snaps</string>
    <string name="explore_button_label">Explore</string>
    <string name="publish_button_label">Publish</string>
    <string name="snap_info_sample">20 yard away</string>
    <string name="snap_action_comment_info_sample">34k</string>
    <string name="snap_image_content_description">The snap image content</string>
    <string name="report_this_snap_button_text">Report this snap</string>
    <string name="title_activity_snaps">Snaps</string>
    <string name="item_clicked">Item clicked</string>
    <string name="commentator_id_sample">zapynou Optimus prime</string>
    <string name="comment_minified_sample">
        Hey, i do appreciate your shirt,my mum offered me the same 3 years ago. Unfortunaltely, i lose it, and i hate myself for that. I looking to buy another one whatever the price, how can i reach you?
        And if you want to sell can you at least telle you got it so that i can try to reach the store?
    </string>
    <string name="comment_minified_readmore_action_text">Dig ...</string>
    <string name="commented_snap_image_content_description">The commented snap image content</string>

    <string-array name="snaps_distance">
        <item>20 Yard away</item>
        <item>40 Yard away</item>
        <item>10 Yard away</item>
        <item>5 Yard away</item>
        <item>5 Yard away</item>
        <item>40 Yard away</item>
        <item>25 Yard away</item>
        <item>85 Yard away</item>
        <item>56 Yard away</item>
        <item>6 Yard away</item>
    </string-array>

    <array name="snaps_images">
        <item>@drawable/img_action_art_black</item>
        <item>@drawable/img_adorable_beautiful_cute</item>
        <item>@drawable/img_affection_bike_child</item>
        <item>@drawable/img_antique_desk_device</item>
        <item>@drawable/img_blur_bottle_dawn</item>
        <item>@drawable/img_activity_adolescent_adult</item>
        <item>@drawable/img_barefoot_beach_blur</item>
        <item>@drawable/img_black_background_costume_dark</item>
        <item>@drawable/img_activity_adults_athletes</item>
        <item>@drawable/img_automobile_camaro_car</item>
    </array>
    <string name="title_activity_snap_details">Snap Details</string>
    <string name="retry">Retry</string>
    <string name="nogps_tap_retry">Your location is not activated, tap to activate</string>
    <string name="action_enable_gps">enable</string>
    <string name="location_settings_inadequate">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="pending_intent_unable_execute_request">PendingIntent unable to execute request.</string>
    <string name="offline_get_back_online">Offline, get back online!</string>
    <string name="backed_online_joy">Network available, the joy!</string>
    <string name="enable_required_settings">Please enable GPS and network access </string>
    <string name="dismiss">Dismiss</string>
    <string name="distance_info_suffix">m away.</string>
    <string name="image_preview">Image preview</string>

    <string name="title_activity_snap_publisher">Review and publish</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="what_is_this_picture_hint">What is this picture ...</string>
    <string name="image_background">Image background</string>

</resources>
