<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".view.activity.MainActivity">

    <ImageView
        android:id="@+id/main_bg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_snap_anonym"
        android:contentDescription="@string/image_background"
        android:fitsSystemWindows="true" />

    <Button
        android:id="@+id/imageButton_explore_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/explore_snaps"
        android:drawableStart="@drawable/ic_explore"
        android:drawableLeft="@drawable/ic_explore"
        android:onClick="onExploreSnaps"
        android:padding="8dp"
        android:text="@string/explore_button_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/rocko"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_publish_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/imageButton_publish_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/publish_a_snap"
        android:drawableStart="@drawable/ic_share"
        android:drawableLeft="@drawable/ic_share"
        android:onClick="onPublishSnap"
        android:padding="8dp"
        android:text="@string/publish_button_label"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/rocko"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        app:fontFamily="@font/alissya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>